fixes mobile top spacing

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ h1, h2, h3, h4 {
 .project {
     text-align: center;
     position: fixed;
-    top: 36%;
+    top: 32%;
     left: 0;
     bottom: 0;
     right: 0;
